--- a/LibraNET/Views/Book/Add.cshtml
+++ b/LibraNET/Views/Book/Add.cshtml
@@ -9,57 +9,57 @@
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <form asp-controller="Book" asp-action="Add" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label asp-for="@Model.Title" class="form-label">Title</label>
+                <label asp-for="@Model.Title" class="form-label"></label>
                 <input asp-for="@Model.Title" class="form-control" aria-required="true" />
                 <span asp-validation-for="@Model.Title" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.ISBN" class="form-label">ISBN</label>
+                <label asp-for="@Model.ISBN" class="form-label"></label>
                 <input asp-for="@Model.ISBN" class="form-control" aria-required="false" />
                 <span asp-validation-for="@Model.ISBN" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.PublicationDate" class="form-label">Publication Date</label>
+                <label asp-for="@Model.PublicationDate" class="form-label"></label>
                 <input type="date" asp-for="@Model.PublicationDate" class="form-control" aria-required="true"/>
                 <span asp-validation-for="@Model.PublicationDate" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.Description" class="form-label">Description</label>
+                <label asp-for="@Model.Description" class="form-label"></label>
                 <textarea asp-for="@Model.Description" class="form-control" aria-required="true" rows="5"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="PageCount" class="form-label">Page Count</label>
+                <label asp-for="PageCount" class="form-label"></label>
                 <input asp-for="PageCount" class="form-control"/>
                 <span asp-validation-for="PageCount" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Language" class="form-label">Language</label>
+                <label asp-for="Language" class="form-label"></label>
                 <input asp-for="Language" class="form-control"/>
                 <span asp-validation-for="Language" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Image" class="form-label">Image</label>
+                <label asp-for="Image" class="form-label"></label>
                 <input type="file" asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Price" class="form-label">Price</label>
+                <label asp-for="Price" class="form-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="AvailableCount" class="form-label">Available Count</label>
+                <label asp-for="AvailableCount" class="form-label"></label>
                 <input asp-for="AvailableCount" class="form-control"/>
                 <span asp-validation-for="AvailableCount" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="PublisherName" class="form-label">Publisher</label>
+                <label asp-for="PublisherName" class="form-label"></label>
                 <input asp-for="PublisherName" class="form-control" />
                 <span asp-validation-for="PublisherName" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.SelectedCategoriesIds" class="form-label">Categories</label>
+                <label asp-for="@Model.SelectedCategoriesIds" class="form-label"></label>
                 <select asp-for="@Model.SelectedCategoriesIds" class="form-select" id="multiple-select-field-categories" data-placeholder="Choose categories" multiple>
                     =
                     @foreach (var category in @Model.Categories)
@@ -70,7 +70,7 @@
                 <span asp-validation-for="@Model.SelectedCategoriesIds" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.SelectedAuthorsIds" class="form-label">Authors</label>
+                <label asp-for="@Model.SelectedAuthorsIds" class="form-label"></label>
                 <select asp-for="@Model.SelectedAuthorsIds" class="form-select" id="multiple-select-field-authors" data-placeholder="Choose authors" multiple>
                     @foreach (var author in @Model.Authors)
                     {
