--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -33,6 +33,17 @@
 						<li class="nav-item">
 							<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">All Authors</a>
 						</li>
+						@if (User.IsInRole("Admin"))
+						{
+							<li class="nav-item dropdown">
+								<a class="nav-link text-white dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+									Add
+								</a>
+								<ul class="dropdown-menu">
+									<li> <a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Add">Add Book</a></li>
+								</ul>
+							</li>
+						}
 					</ul>
 					<partial name="_LoginPartial" />
 				</div>
